# fortran-filesystem

./: .clang-tidy  .gitattributes  .gitignore  API.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  Makefile  README.md  coverage.cmake  cppcheck.supp  cray.cmake  ford.md  fpm.toml  memcheck.cmake  meson.build  meson_options.txt  options.cmake
cmake/abi_check/: CMakeLists.txt  lib_fs.cpp  main.cpp  main_fs.c
cmake/fs_check/: CMakeLists.txt  check_fs_symlink.cpp  lib.f90  lib_fs.cpp  main.f90  main_fs.c  myfs.h
concepts/: CMakeLists.txt
concepts/canonical/: CMakeLists.txt  canonical.c  canonical.cpp  canonical.h  case_sense.cmake  equivalent.cmake  main.c  windows_read_symlink.c  windows_read_symlink.cpp
concepts/exe_dir/: CMakeLists.txt  main.f90  realpath.c
concepts/file_types/: CMakeLists.txt  file_status.cpp  file_status.h  main.cpp
concepts/iterdir/: CMakeLists.txt  iterdir.cpp  iterdir.py
concepts/lib_dir/: CMakeLists.txt  lib.c  main.f90
concepts/parts/: file_parts.c  file_parts.cxx
concepts/space/: CMakeLists.txt  demo_space.cpp  space_avail.cpp
concepts/syscall/: CMakeLists.txt  CreateProcess.c  README.md  exec.c  msvc.c  unix.c
example/: CMakeLists.txt  CMakePresets.json  ex1.f90  ex2.cpp  ex3.c
example/1/: main.f90
example/2/: main.cpp
example/3/: main.c
example/CXX_standalone/: CMakeLists.txt
example/C_standalone/: CMakeLists.txt
example/Fortran_standalone/: CMakeLists.txt
examples/: CMakeLists.txt  Readme.md  ex1.f90  ex2.cpp  ex3.c
src/: CMakeLists.txt  Makefile  canonical_posix.f90  canonical_windows.f90  cli.f90  common.c  compiler.F90  crt_dummy.c  dummy_compiler.f90  envvar.f90  f2c.f90  filesystem.cpp  filesystem.f90  filesystem.h  find.f90  fs.cpp  fs_cpp.f90  gcc.f90  get_path.c  get_path.f90  impure.f90  intel.f90  io.f90  iter.f90  max.c  os.F90  pathlib.f90  pathlib_dummy.f90  pathlib_gcc.f90  pathlib_intel.f90  pathlib_unix.f90  pathlib_windows.f90  platform.in.f90  posix_crt.f90  posix_path.f90  posix_sys.f90  pure.f90  pure_iter.f90  symlink.in.f90  test_pathlib.f90  (+4 more)
src/c/: README.md  cwalk.c  env.c  f2c.f90  filesystem.c  find.f90  get_path.c  io.f90  sys.c
src/common/: common.c  filesystem.cpp  get_path.c  windows.c
src/common/fortran/: f2c.f90  (+3 more)
src/compiler/: CMakeLists.txt  gcc.f90  gcc.f90.inc  gcc_no_cpp_fs.f90  intel.f90  intel.f90.inc  intel_no_cpp_fs.f90  no_fs_cpp.f90  unknown.f90  unknown.f90.inc
src/concepts/: CMakeLists.txt  canonical_posix.f90  canonical_windows.f90  file_parts.cxx  parts.f90  test_canonical.f90
src/fallback/: CMakeLists.txt  Makefile  common.c  crt.f90  cwalk.h  filesystem.F90  filesystem.c  filesystem.f90  fs_c.f90  general.f90  get_path.f90  iter.f90  max.c  sys.f90
src/posix/: crt.c  crt.f90  crt.f90.inc  gcc.f90  intel.f90  path.f90.inc  sys.f90
src/tests/: CMakeLists.txt  meson.build  test_canonical.f90  test_cpp_fs.f90  test_cpp_relative.f90  test_exe.f90  test_expanduser.f90  test_fileop.f90  test_filesize.f90  test_filesystem.f90  test_find.f90  test_parts.f90  test_pathlib.f90  test_relative.f90  test_rw_text.f90  test_symlink.f90
src/windows/: CMakeLists.txt  crt.c  crt.f90  crt.f90.inc  gcc.f90  intel.f90  path.f90.inc  sys.f90  sys.f90.inc
test/: CMakeLists.txt  ffilesystem_bench.h  meson.build  stdin.cmake  test_binpath.f90  test_canonical.f90  test_core.f90  test_cpp_fs.f90  test_cpp_ifc.cpp  test_cpp_relative.f90  test_exe.f90  test_expanduser.f90  test_fileop.f90  test_filesize.f90  test_find.f90  test_ifc.c  test_ifc.cpp  test_permissions_setup.cmake  test_rw_text.f90  test_symlink.f90
test/bench/: CMakeLists.txt  bench.md  bench_canonical.cpp  bench_env.cpp  bench_exe.cpp  bench_expanduser.cpp  ffilesystem_bench.cpp  ffilesystem_bench.h
test/c/: CMakeLists.txt  test_binpath.c  test_binpath.cpp  test_canonical.c  test_canonical.cpp  test_core.cpp  test_empty.c  test_env.c  test_env.cpp  test_exe.cpp  test_exepath.c  test_exepath.cpp  test_expanduser.c  test_file.c  test_ifc.c  test_libpath.c  test_libpath.cpp  test_nullptr.c  test_permissions.cpp  test_reserved.c  test_utf8.cpp  test_windows.cpp
test/canonical_resolve/: CMakeLists.txt  bench_canonical.cpp  test_canonical.cpp  test_canonical.f90  test_resolve.f90
test/core/: CMakeLists.txt  test_core.cpp  test_core.f90
test/cpp/: CMakeLists.txt  test_binpath.cpp  test_canonical.cpp  test_expanduser.cpp  test_file.cpp  test_ifc.cpp  test_nullptr.cpp  test_reserved.cpp  test_utf8.cpp
test/empty/: CMakeLists.txt  test_empty.cpp
test/environment/: CMakeLists.txt  bench_env.cpp  test_env.cpp  test_env.f90  test_setenv.f90
test/executable/: CMakeLists.txt  bench_exe.cpp  test_exe.cpp  test_exe.f90  test_which.f90
test/exepath/: CMakeLists.txt  test_exepath.cpp  test_exepath.f90
test/expanduser/: CMakeLists.txt  bench_expanduser.cpp  test_expanduser.cpp  test_expanduser.f90
test/fileops/: CMakeLists.txt  test_copyfile.f90  test_fileop.f90  test_mkdir.f90  test_same.f90
test/fortran/: CMakeLists.txt  test_binpath.f90  test_canonical.f90  test_copyfile.f90  test_core.f90  test_cpp_fs.f90  test_cpp_relative.f90  test_env.f90  test_exe.f90  test_expanduser.f90  test_fileop.f90  test_filesize.f90  test_find.f90  test_libpath.f90  test_match.f90  test_mkdir.f90  test_mkdtemp.f90  test_parts.f90  test_permissions.f90  test_relative.f90  test_reserved.f90  test_resolve.f90  test_rw_text.f90  test_same.f90  test_symlink.f90  test_utf8.f90  test_windows.f90
test/libpath/: CMakeLists.txt  test_libpath.cpp  test_libpath.f90
test/mkdtemp/: CMakeLists.txt
test/overflow/: CMakeLists.txt  test_overflow.c
test/permissions/: CMakeLists.txt  test_permissions.cpp
test/reserved/: CMakeLists.txt  test_reserved.c  test_reserved.f90  test_safe.cpp  test_safe.f90
test/symlink/: CMakeLists.txt  test_symlink.f90
test/windows/: CMakeLists.txt  test_windows.cpp  test_windows.f90
tests/: CMakeLists.txt  meson.build  test_c_ifc.c  test_canonical.f90  test_cpp_fs.f90  test_cpp_relative.f90  test_expanduser.f90  test_fileop.f90  test_filesize.f90  test_filesystem.f90  test_find.f90  test_match.f90
(+74 files in other folders)
